--- a/css/footer/footer.css
+++ b/css/footer/footer.css
@@ -3,13 +3,14 @@ footer {
 	flex-direction: column;
 	align-items: center;
 	width: 100%;
-	padding: 30px 1%;
+	padding: 30px 0;
 }
 
 footer .container {
 	flex-direction: column;
 	width: 100%;
 	align-items: center;
+	padding: 0 1%;
 }
 
 footer .text-contacts {
