--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ body {
 	width: 100%;
 	background-color: var(--black-color);
 	color: var(--white-color);
+	overflow-x: hidden;
+}
+
+body .hidden {
+	visibility: hidden;
 }
 
 .container {
