--- a/css/footer/footer.css
+++ b/css/footer/footer.css
@@ -10,7 +10,8 @@ footer .container {
 	flex-direction: column;
 	width: 100%;
 	align-items: center;
-	padding: 0 1%;
+	gap: 15px;
+	padding: 0 112px;
 }
 
 footer .text-contacts {
@@ -18,6 +19,7 @@ footer .text-contacts {
 	justify-content: space-between;
 	width: 100%
 }
+
 footer .copyright {
 	display: flex;
 	flex-direction: column;
@@ -28,4 +30,20 @@ footer .copyright {
 footer .container-orange-bar {
 	display: flex;
 	justify-content: end;
+}
+
+@media (max-width: 768px) {
+	footer .container {
+		padding: 0 32px;
+	}
+}
+
+@media (max-width: 480px) {
+	footer .container {
+		padding: 0 20px;
+	}
+
+	footer .text-contacts {
+		flex-direction: column;
+	}
 }
