--- a/css/header/container-merchandising.css
+++ b/css/header/container-merchandising.css
@@ -25,8 +25,34 @@
 .button {
 	padding: 10px 45px;
 	border-radius: 7px;
-	max-width: 30%;
+	width: 200px;
 	border: none;
 	background: var(--orange-color);
 	font-size: var(--bodyLG-size);
+}
+
+@media (max-width: 768px) {
+	.container-merchandising .merchandising {
+		padding: 20px 32px;
+	}
+
+	.merchandising-text h2 {
+		font-size: var(--h3-text);
+	}
+	.merchandising-text h3 {
+		font-size: var(--h4-text);
+	}
+}
+
+@media (max-width: 480px) {
+	.container-merchandising .merchandising {
+		padding: 20px 20px;
+	}
+
+	.merchandising-text h2 {
+		font-size: var(--h4-text);
+	}
+	.merchandising-text h3 {
+		font-size: var(--h5-text);
+	}
 }
