--- a/css/header/header.css
+++ b/css/header/header.css
@@ -14,6 +14,8 @@ header nav {
 	justify-content: center;
 	background: var(--opaqueBlack-color);
 	padding: 16px 1%; 
+	position: relative;
+	z-index: 10;
 }
 
 header .container-merchandising {
@@ -21,4 +23,28 @@ header .container-merchandising {
 	align-items: center;
 	justify-content: center;
 	height: 95%;
+}
+
+header .menu-mobile {
+	display: none;
+}
+
+@media (max-width: 768px) {
+	header .menu-mobile {
+		display: flex;
+	}
+
+	header nav {
+		padding: 16px 32px; 
+	}
+}
+
+@media (max-width: 480px) {
+	header .menu-mobile {
+		display: flex;
+	}
+
+	header nav {
+		padding: 16px 20px; 
+	}
 }
