--- a/css/main/contact.css
+++ b/css/main/contact.css
@@ -10,7 +10,8 @@
 }
 .container-contacts .img-adress {
 	width: 100%;
-	max-width: 400px; 
+	max-width: 600px;
+	max-height: 400px; 
 	border-radius: 5px;
 }
 
@@ -42,7 +43,40 @@
 	font-size: 20px;
 }
 
+.adress {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: end;
+}
+
 .adress h6 {
 	font-size: var(--h6-text);
 	margin-bottom: 5px;
+}
+
+@media (max-width: 768px) {
+	.contacts .container-contacts {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.container-contacts .img-adress {
+		max-width: 100%;
+		max-height: 350px; 
+		text-align: center;
+	}
+
+	.container-contacts .text-contacts {
+		flex-direction: row;
+		width: 100%;
+	}
+	
+}
+
+@media (max-width: 480px) {
+	.container-contacts .text-contacts {
+		flex-direction: column;
+	}
+	
 }
