--- a/css/header/nav.css
+++ b/css/header/nav.css
@@ -8,11 +8,17 @@ nav .menu {
 	z-index: 100;
 }
 
-.menu li {
+.menu li  a {
+	text-decoration: none;
 	color: var(--white-color);
 	font-size: var(--bodyLG-text);
 	font-weight: var(--weight-text);
 	z-index: 100;
+}
+
+.menu-mobile {
+	cursor: pointer;
+	font-size: 20px;
 }
 
 .fa-xmark {
@@ -20,6 +26,7 @@ nav .menu {
 }
 
 @media (max-width: 768px) {
+
 	nav .menu {
 		flex-direction: column;
 		align-items: center;
@@ -46,11 +53,6 @@ nav .menu {
 		transition: visibility 0.3s ease, opacity 0.3s ease, transform 0.3s ease;
   }
 
-	header .container-merchandising {
-		position: relative;
-		z-index: 1;
-	}
-
 	.menu li {
 		width: 100%;
 		display: flex;
@@ -58,19 +60,9 @@ nav .menu {
 		gap: 1rem;
 		padding-bottom: 0.5rem;
 		margin-left: 1rem;
-		background-color: #E0E0E0;
+		background-color: var(--darkOrange-color);
 		padding: 20px;
 		z-index: 100;
-	}
-
-	li a {
-		color: var(--black-color);
-		text-decoration: none;
-		font-size: 1.7rem;
-	}
-	
-	li img, li a {
-		user-select: none;
 	}
 	
 	li:first-child {
@@ -83,8 +75,49 @@ nav .menu {
 		border-bottom-right-radius: 1.6rem;
 	}
 	
-	.menu-mobile li:hover {
+	li:hover {
 		cursor: pointer;
-		background-color: #eeeeee;
+		background: var(--white-color);
+		transition: all .7s ease;
+	}
+
+	.menu li:hover a {
+		color: var(--vibrantOrange-color);
+		transition: all .7s ease;
 	}
 }
+
+@media (min-width: 768px) {
+	.menu a {
+		font-size: 1.7rem;
+		text-decoration: none;
+		position: relative;
+		display: block;
+		padding: 5px;
+		color: var(--black-color);
+	 }
+	
+	 .menu a:hover {
+		color: var(--blue1-color);
+		transition: 1s;
+		transform: translateY(5%);
+	 }
+	 
+	 .menu a::before {
+		content: '';
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 2px;
+		background: var(--orange-color);
+		z-index: 10;
+		transform: scaleX(0);
+		transform-origin: left;
+		transition: transform 0.5s ease-in-out;
+	 }
+	 
+	 .menu a:hover::before {
+		transform: scaleX(1);
+	 }
+	}
